<resources>
    <string name="app_name">SMS-Verifier</string>
    <string name="developer">Project by Arie Lev</string>

    <string name="NA">Not available</string>

    <string name="btn_login">Login</string>
    <string name="btn_register">Create Account</string>
    <string name="btn_forgot_pass">Forgot Password</string>

    <!-- Login + Register Activity -->
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <!-- Action bar strings -->
    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_legal">Legal</string>
    <string name="action_exit">Exit</string>
    <string name="action_reset_pass">Reset Password</string>
    <string name="action_logout">Logout</string>

</resources>
